fix alignment on hidden button

--- a/src/scss/red_layout.scss
+++ b/src/scss/red_layout.scss
@@ -130,6 +130,7 @@ form.link input[type='submit'] {
   font-size: inherit;
   color: $link_colour;
   text-decoration: underline;
+  text-align: left;
 }
 
 
